@@ -20,20 +20,19 @@
 
 package com.arangodb.velocypack.internal;
 
-import java.math.BigDecimal;
-import java.math.BigInteger;
-import java.sql.Timestamp;
-import java.util.Date;
-import java.util.UUID;
-
-import javax.xml.bind.DatatypeConverter;
-
 import com.arangodb.velocypack.VPackBuilder;
 import com.arangodb.velocypack.VPackSerializationContext;
 import com.arangodb.velocypack.VPackSerializer;
 import com.arangodb.velocypack.VPackSlice;
 import com.arangodb.velocypack.exception.VPackException;
 import com.arangodb.velocypack.internal.util.DateUtil;
+
+import java.math.BigDecimal;
+import java.math.BigInteger;
+import java.sql.Timestamp;
+import java.util.Base64;
+import java.util.Date;
+import java.util.UUID;
 
 /**
  * @author Mark Vollmary
@@ -212,7 +211,7 @@ public class VPackSerializers {
 			final String attribute,
 			final byte[] value,
 			final VPackSerializationContext context) throws VPackException {
-			builder.add(attribute, DatatypeConverter.printBase64Binary(value));
+			builder.add(attribute, Base64.getEncoder().encodeToString(value));
 		}
 	};
 	public static final VPackSerializer<Byte> BYTE = new VPackSerializer<Byte>() {
